# bunget

./: .gitignore  LICENSE.md  README-C.H.I.P.md  README.md
app/: CMakeLists.txt  main.cpp  mainn.cpp
bunget/: bunget.cbp  bunget.depend  bunget.layout  bunget.mk  bunget.pro  bunget.project  bunget.txt
bunget/Debug/: bunget  libbunget_ascon.cpp.o.d  libbunget_bt_incinpl.cpp.o.d  libbunget_bt_socket.cpp.o.d  libbunget_bu_gap.cpp.o.d  libbunget_bu_gatt.cpp.o.d  libbunget_bu_hci.cpp.o.d  libbunget_bybuff.cpp.o.d  libbunget_gattdefs.cpp.o.d  libbunget_hci_config.cpp.o.d  libbunget_hci_socket.cpp.o.d  libbunget_l2cap_socket.cpp.o.d  libbunget_libbungetpriv.cpp.o.d  libbunget_rfcomm_socket.cpp.o.d  libbunget_sco_socket.cpp.o.d  libbunget_secmanp.cpp.o.d  libbunget_uguid.cpp.o.d  src_crypto.cpp.o.d  src_main.cpp.o.d
lib/: CMakeLists.txt  asconold.cpp  bt_socket.h  bu_gap.cpp  bu_gap.h  bu_gatt.cpp  bu_gatt.h  bybuff.cpp  bybuff.h  gattdefs.cpp  hci_socket.cpp  hci_socket.h  lebiendians.h  libbungetpriv.cpp  libbungetpriv.h  rfcomm_socket.cpp  secmanp.h  uguid.cpp
lib/include/: libbunget.h
src/: CMakeCache.txt  CMakeLists.txt  LICENSE.md  Makefile  README.md  bunget.cbp  bunget.layout  cmake_install.cmake  crypto.cpp  main.cpp  mainn.cpp
src/R-PI/: CMakeLists.txt  main.cpp
src/libbunget/: CMakeCache.txt  CMakeLists.txt  CMakeListsARM.txt  Makefile  ascon.cpp  ascon.h  asconold.cpp  bt_socket.cpp  bt_socket.h  bu_gap.cpp  bu_gap.h  bu_gatt.cpp  bu_gatt.h  bu_hci.cpp  bu_hci.h  bungetconf.h  bybuff.cpp  bybuff.h  cmake_install.cmake  cryptos.cpp  cryptos.h  cryptosold.cpp  gattdefs.cpp  gattdefs.h  hci_socket.cpp  hci_socket.h  l2cap_socket.cpp  l2cap_socket.h  lebiendians.h  libbunget.cbp  libbunget.depend  libbunget.layout  libbungetpriv.cpp  libbungetpriv.h  rfcomm_socket.cpp  rfcomm_socket.h  sco_socket.cpp  sco_socket.h  secmanp.cpp  secmanp.h  (+1 more)
src/libbunget/R-PI/: CMakeLists.txt
src/libbunget/include/: .libbunget.h.swp  bluetooth.h  hci.h  hci_lib.h  l2cap.h  libbunget.h  rfcomm.h  sco.h  uuid.h
